--- a/Pagina_web_Prueba.html
+++ b/Pagina_web_Prueba.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Este es un archivo de prueba, servira para  haer pruebas con GitHub</h1>
         <p>Tengo 28 años</p>
+        <p>Renglon de prueba</p>
     </body>
 </html>
