Commit al master en su version mas reciente

--- a/Pagina_web_Prueba.html
+++ b/Pagina_web_Prueba.html
@@ -1,11 +1,17 @@
 <html>
     <head>
-        <title>Control de versiones en GitHub</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Este es un archivo de prueba, servira para  haer pruebas con GitHub</h1>
-        <p>Tengo 28 años</p>
-        <p>Renglon de prueba</p>
+        <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
     </body>
 </html>
